--- a/works/3_ticketN.html
+++ b/works/3_ticketN.html
@@ -14,20 +14,20 @@
   <link href="https://fonts.googleapis.com/css2?family=Rock+Salt&display=swap" rel="stylesheet">
   <link rel="stylesheet" as="style" crossorigin href="https://cdn.jsdelivr.net/gh/orioncactus/pretendard@v1.3.9/dist/web/variable/pretendardvariable.min.css" />
   <!-- favicon -->
-  <link rel="apple-touch-icon" sizes="57x57" href="/img/favicon/apple-icon-57x57.png">
-  <link rel="apple-touch-icon" sizes="60x60" href="/img/favicon/apple-icon-60x60.png">
-  <link rel="apple-touch-icon" sizes="72x72" href="/img/favicon/apple-icon-72x72.png">
-  <link rel="apple-touch-icon" sizes="76x76" href="/img/favicon/apple-icon-76x76.png">
-  <link rel="apple-touch-icon" sizes="114x114" href="/img/favicon/apple-icon-114x114.png">
-  <link rel="apple-touch-icon" sizes="120x120" href="/img/favicon/apple-icon-120x120.png">
-  <link rel="apple-touch-icon" sizes="144x144" href="/img/favicon/apple-icon-144x144.png">
-  <link rel="apple-touch-icon" sizes="152x152" href="/img/favicon/apple-icon-152x152.png">
-  <link rel="apple-touch-icon" sizes="180x180" href="/img/favicon/apple-icon-180x180.png">
-  <link rel="icon" type="image/png" sizes="192x192"  href="/img/favicon/android-icon-192x192.png">
-  <link rel="icon" type="image/png" sizes="32x32" href="/img/favicon/favicon-32x32.png">
-  <link rel="icon" type="image/png" sizes="96x96" href="/img/favicon/favicon-96x96.png">
-  <link rel="icon" type="image/png" sizes="16x16" href="/img/favicon/favicon-16x16.png">
-  <link rel="manifest" href="/img/favicon/manifest.json">
+  <link rel="apple-touch-icon" sizes="57x57" href="./img/favicon/apple-icon-57x57.png">
+  <link rel="apple-touch-icon" sizes="60x60" href="./img/favicon/apple-icon-60x60.png">
+  <link rel="apple-touch-icon" sizes="72x72" href="./img/favicon/apple-icon-72x72.png">
+  <link rel="apple-touch-icon" sizes="76x76" href="./img/favicon/apple-icon-76x76.png">
+  <link rel="apple-touch-icon" sizes="114x114" href="./img/favicon/apple-icon-114x114.png">
+  <link rel="apple-touch-icon" sizes="120x120" href="./img/favicon/apple-icon-120x120.png">
+  <link rel="apple-touch-icon" sizes="144x144" href="./img/favicon/apple-icon-144x144.png">
+  <link rel="apple-touch-icon" sizes="152x152" href="./img/favicon/apple-icon-152x152.png">
+  <link rel="apple-touch-icon" sizes="180x180" href="./img/favicon/apple-icon-180x180.png">
+  <link rel="icon" type="image/png" sizes="192x192"  href="./img/favicon/android-icon-192x192.png">
+  <link rel="icon" type="image/png" sizes="32x32" href="./img/favicon/favicon-32x32.png">
+  <link rel="icon" type="image/png" sizes="96x96" href="./img/favicon/favicon-96x96.png">
+  <link rel="icon" type="image/png" sizes="16x16" href="./img/favicon/favicon-16x16.png">
+  <link rel="manifest" href="./img/favicon/manifest.json">
   <meta name="msapplication-TileColor" content="#ffffff">
   <meta name="msapplication-TileImage" content="/ms-icon-144x144.png">
   <meta name="theme-color" content="#ffffff">
@@ -37,7 +37,7 @@
     <nav>
       <div class="logo">
         <a href="/index.html">
-          <img src="/img/Logo_jk_letter.png" alt="logo">
+          <img src="./img/Logo_jk_letter.png" alt="logo">
         </a>
       </div>
       <div class="menu">
@@ -62,7 +62,7 @@
     </div>
     <div class="work_box">
       <div class="mainImg ticketN_web">
-        <img src="../img/ticketn/ticketN_logo.png" alt="ticketN_logo">
+        <img src=".../img/ticketn/ticketN_logo.png" alt="ticketN_logo">
       </div>
       <div class="description">
         <a href="https://ticketn.net/" target="_blank" class="name">
@@ -87,16 +87,16 @@
       
       <div class="detail">
         <div class="img-container mockup">
-          <img src="../img/ticketn/tn_mockup.png" alt="ticketN_web_mockup" class="tn_mockup">
+          <img src=".../img/ticketn/tn_mockup.png" alt="ticketN_web_mockup" class="tn_mockup">
         </div>
         <!-- <div class="video-container">
           <video src=""></video>
         </div> -->
         <div class="img-container mockup">
-          <img src="../img/ticketn/tn_pages.png" alt="ticketN_pages" class="tn_pages">
+          <img src=".../img/ticketn/tn_pages.png" alt="ticketN_pages" class="tn_pages">
         </div>
         <div class="img-container mockup">
-          <img src="../img/ticketn/tn_pages_2.png" alt="ticketN_pages_2" class="tn_pages_2">
+          <img src=".../img/ticketn/tn_pages_2.png" alt="ticketN_pages_2" class="tn_pages_2">
         </div>
       </div>
     </div>
