--- a/works/4_ticketNContents.html
+++ b/works/4_ticketNContents.html
@@ -37,7 +37,7 @@
     <nav>
       <div class="logo">
         <a href="/index.html">
-          <img src="/img/Logo_jk_letter.png" alt="logo">
+          <img src="./img/Logo_jk_letter.png" alt="logo">
         </a>
       </div>
       <div class="menu">
